[metadata]
name = pywellcad
description = a Python client for the WellCAD Automation API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.alt.lu/
author = Advanced Logic Technology
author_email = support@alt.lu
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License

[options]
packages = find:
zip_safe = False
python_requires = >=3.6
install_requires =
    pywin32==303 ; platform_system=="Windows"